Item 111: section 7 records a JFR profile of a build, a job of example lines, and a runner pass